--- a/face_detection/environment.yml
+++ b/face_detection/environment.yml
@@ -1,15 +1,14 @@
 name: retinaface
 channels:
-  - nvidia
   - pytorch
 dependencies:
+  - cudatoolkit=11.3
   - matplotlib
-  - nvidia::cudatoolkit=11.1
   - pip
   - python=3.9
-  - pytorch::pytorch=1.9.0
-  - pytorch::torchvision=0.10.0
-  - tqdm
+  - pytorch::pytorch=1.10.0
+  - pytorch::torchvision=0.11.0
   - scipy
+  - tqdm
   - pip:
-    - opencv-python
+    - opencv-python-headless
