--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - python=3.9
   - pytorch::pytorch=1.10.0
   - pytorch::torchvision=0.11.0
+  - scikit-image
   - scipy
   - tqdm
   - pip:
