--- a/face_detection/environment.yml
+++ b/face_detection/environment.yml
@@ -6,8 +6,8 @@ dependencies:
   - matplotlib
   - pip
   - python=3.9
-  - pytorch::pytorch=1.10.0
-  - pytorch::torchvision=0.11.0
+  - pytorch::pytorch=1.10.1
+  - pytorch::torchvision
   - scipy
   - tqdm
   - pip:
